--- a/src/style.css
+++ b/src/style.css
@@ -2,3 +2,19 @@
     margin: 0;
     padding: 0;
 }
+
+body.center {
+    min-height: 100vh;
+}
+
+div.center-table {
+    position: relative;
+    min-height: 100vh;
+}
+
+div.center-table>table {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+}
