--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,23 @@
     padding: 0;
 }
 
+h2 {
+    font-size: medium;
+}
+
+input {
+    text-align: center;
+    padding: 5px 10px 5px 8px;
+}
+
+select {
+    padding: 5px 10px 5px 8px;
+}
+
+div#container {
+    margin: 2%;
+}
+
 div.input-block {
     display: inline;
 }
